--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,7 +47,8 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: rgb(142, 190, 102);
+  color: rgb(51, 51, 51);
 }
 button:focus,
 button:focus-visible {
@@ -63,6 +64,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: rgb(122, 196, 62);
   }
 }
