--- a/frontend/src/scss/_login.scss
+++ b/frontend/src/scss/_login.scss
@@ -32,11 +32,25 @@
 
 .login-btn {
   width: 80%;
-  border-radius: 3.125rem;
-  background-color: $blue-500;
+  // border-radius: 3.125rem;
+  // background-color: #B784B7;
+  background-image: linear-gradient(#8E7AB5, #B784B7, #E493B3, #EEA5A6);
   color: $White;
   font-size: $font-size-h4;
   font-weight: $font-weight-bold;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  border: none;
+  
+}
+// .login-btn:hover {
+//   background-color: #8E7AB5;
+// }
+
+.btn.login-btn:hover {
+  background-color: #495057; /* Slightly lighter dark */
+  color: #f8f9fa; /* Light gray text */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); /* Soft shadow */
+  transform: translateY(-2px); /* Slight lift */
 }
 
 .contct-link {
@@ -107,4 +121,21 @@
     max-width: 15.625rem; // Adjust the max-width as needed
     margin: 0 auto; // Center the button horizontally
   }
+}
+
+.title {
+  font-size: 3rem; // Increase the font size
+  text-align: center; // Center align the title
+  margin-bottom: 1rem;
+  margin-right: 100px; // Add some spacing below
+  // color: $primary-color; // Change the color to your primary theme color
+  color: $blue-500;
+  cursor: text;
+  // border-bottom: 2px solid #B784B7;
+  padding: 10px 0;
+  // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  letter-spacing: 2px;
+  margin-bottom: 1rem;
+  // background-image: linear-gradient(#8E7AB5, #B784B7, #E493B3, #EEA5A6);
+  // box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
