--- a/frontend/src/scss/_style_guid.scss
+++ b/frontend/src/scss/_style_guid.scss
@@ -369,6 +369,7 @@
 .border-btn:hover {
   background-color: $blue-500;
   color: $Neutral-Background;
+  background-image: linear-gradient(#8E7AB5, #B784B7, #E493B3, #EEA5A6);
 }
 
 .btn-group {
@@ -534,14 +535,22 @@
   @include EditProfileBtn;
   
 }
+.edit_profile_btn:hover {
+  background-image: linear-gradient(#8E7AB5, #B784B7, #E493B3, #EEA5A6);
+}
 .fatimes:hover {
   cursor: pointer;
 }
+.third-sub-container{
+  background-image: linear-gradient(#8E7AB5, #B784B7, #E493B3, #EEA5A6);
+}
 .third-sub-container:hover {
   cursor: pointer;
+  
 }
 .second-sub-container {
   cursor: pointer;
+  background-image: linear-gradient(#8E7AB5, #B784B7, #E493B3, #EEA5A6);
 }
 .lblInputName {
   font-family: Inter;
@@ -704,6 +713,7 @@
   width: 8.125rem;
   height: 2.75rem;
 }
+
 .logout-x-icon {
   font-size: 1.5rem;
   margin-left: 23.125rem;
@@ -2062,6 +2072,23 @@ reportGrid {
   border-color: #007bff; /* Change the border color to blue (or any color you want) on hover */
 }
 
+// .navbar-profile-img.active {
+//   border: 2px solid #007bff; /* Example border color */
+//   border-radius: 50%; /* Round border */
+//   transform: scale(1.1);
+// }
+.hamburger.active {
+  transform: rotate(90deg); /* Rotate only when active */
+}
+
+.navbar-profile-img.active {
+  border: 2px solid #007bff;
+  border-radius: 50%;
+  transform: scale(1.1);
+
+}
+
+
 //css for jivass-logo
 /* General navbar styles */
 
@@ -2249,5 +2276,47 @@ reportGrid {
 
 .company-list-item:nth-child(even) {
   background-color: #f0f0f0;  // Grey background for even items
+}
+
+.user-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 8px; /* Space between profile picture and text */
+}
+
+.user-name {
+  font-weight: 600; /* Bold font for the username */
+  color: #333; /* Dark color for the username */
+}
+
+.user-role {
+  font-size: 0.85rem; /* Slightly smaller font for the role */
+  color: #6c757d; /* Subtle gray color for the role text */
+}
+
+/* Adjust these classes in your CSS file */
+
+.user-info {
+  display: flex;
+  flex-direction: column;
+  text-align: right; /* Align text to the right */
+}
+
+.user-name {
+  font-weight: bold;
+  font-size: 0.975rem;
+  color: #333;
+}
+
+.user-role {
+  font-size: 0.875rem;
+  color: #777;
+}
+
+.navbar-profile-img {
+  cursor: pointer;
+  /* Optional: Add margin or size adjustments as needed */
 }
 
