--- a/frontend/src/Pages/LeaveManagement/LeaveManagement.css
+++ b/frontend/src/Pages/LeaveManagement/LeaveManagement.css
@@ -17,9 +17,11 @@
   align-items: center;
   margin-bottom: 2rem;
   padding-bottom: 1rem;
-  border-bottom: 2px solid #f1f5f9;
+  border-bottom: 2px solid #dde8f2;
 }
-
+.dashboard-header h1{
+  font-size:xx-large
+}
 .request-leave-btn {
   background: #4f46e5;
   color: white;
@@ -267,7 +269,8 @@
   font-size: 1.25rem;
   font-weight: 600;
   color: #1e293b;
-  margin: 0;
+  margin:0;
+  padding: 20px;
 }
 
 .close-btn {
@@ -287,6 +290,7 @@
 
 .leave-form {
   padding: 1.5rem;
+  background-color: #f4e9f5;
 }
 
 .form-group {
